[gd_scene load_steps=31 format=3 uid="uid://brs3why3rugsi"]

[ext_resource type="Script" uid="uid://co3vev6mkb25q" path="res://Games/RocketLander/scenes/player/rocket_controller.gd" id="1_scd23"]
[ext_resource type="AudioStream" uid="uid://c08t1jheoq12k" path="res://Games/RocketLander/assets/sound/bubbles.mp3" id="2_05a8e"]
[ext_resource type="Script" uid="uid://cetoeh3lwoaa7" path="res://Games/RocketLander/scenes/player/movement_controller.gd" id="2_m6058"]
[ext_resource type="AudioStream" uid="uid://dnp6s7u0gu8rc" path="res://Games/RocketLander/assets/sound/pop.mp3" id="2_mso6s"]
[ext_resource type="Script" uid="uid://03cncb2xhw3m" path="res://Games/RocketLander/scenes/camera_mount.gd" id="3_lul7u"]
[ext_resource type="Material" uid="uid://cpqrd0jhqcnfe" path="res://Games/RocketLander/particles/bubble_particles.tres" id="4_g7o3v"]
[ext_resource type="Script" uid="uid://bflvjhbs3tuik" path="res://Games/RocketLander/scenes/player/fuel_controller.gd" id="4_qtt7p"]
[ext_resource type="AudioStream" uid="uid://evbgf785fj5w" path="res://Games/RocketLander/assets/sound/success.mp3" id="4_vxola"]
[ext_resource type="Script" uid="uid://d20lgmwr5ukoh" path="res://Games/RocketLander/scenes/player/stability_controller.gd" id="6_jxs5u"]
[ext_resource type="Script" uid="uid://e56syxi527h2" path="res://Games/RocketLander/scenes/player/landing_controller.gd" id="7_p66tl"]
[ext_resource type="Material" uid="uid://yq2ywrvw8k7y" path="res://Games/RocketLander/materials/ship_blue.tres" id="8_5sakl"]
[ext_resource type="PackedScene" uid="uid://c1v1ppm8x01cy" path="res://Games/RocketLander/scenes/ui/hud.tscn" id="8_gq37x"]
[ext_resource type="Material" uid="uid://6fwd7r8tmf8v" path="res://Games/RocketLander/particles/explosion_particles.tres" id="10_xw84m"]
[ext_resource type="Script" uid="uid://bgjutt58yio44" path="res://Games/RocketLander/scenes/player/effects_controller.gd" id="11_smcew"]
[ext_resource type="Material" uid="uid://xrb2i7caokn4" path="res://Games/RocketLander/particles/success_particles.tres" id="12_msahl"]
[ext_resource type="Material" uid="uid://b8nvx6ca73y1r" path="res://Games/RocketLander/materials/success_material.tres" id="13_x3ewv"]
[ext_resource type="PackedScene" uid="uid://buxj68c16odaq" path="res://Games/RocketLander/assets/models/rocket/scene.gltf" id="17_3kkwo"]
[ext_resource type="PackedScene" uid="uid://c1keu360hjpld" path="res://Games/RocketLander/scenes/ui/pause_menu.tscn" id="18_w1p2d"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_sg736"]
height = 1.5

[sub_resource type="CylinderShape3D" id="CylinderShape3D_bc2uk"]
height = 0.71
radius = 0.21

[sub_resource type="SphereShape3D" id="SphereShape3D_i81y8"]
radius = 0.21

[sub_resource type="CylinderMesh" id="CylinderMesh_60h71"]
material = ExtResource("8_5sakl")
top_radius = 0.2
bottom_radius = 0.2
height = 1.5

[sub_resource type="CylinderMesh" id="CylinderMesh_yb2x7"]
top_radius = 0.15
bottom_radius = 0.15
height = 1.0

[sub_resource type="CylinderMesh" id="CylinderMesh_ak0p8"]
material = ExtResource("8_5sakl")
top_radius = 0.0
bottom_radius = 0.15
height = 0.25

[sub_resource type="SphereMesh" id="SphereMesh_ng0vx"]
material = ExtResource("4_g7o3v")

[sub_resource type="SphereMesh" id="SphereMesh_ifw7w"]
material = ExtResource("13_x3ewv")
radius = 0.4
height = 0.8

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_is62b"]
lifetime_randomness = 0.2
particle_flag_rotate_y = true
emission_shape = 1
emission_sphere_radius = 0.2
angle_min = 1.07288e-05
angle_max = 360.0
direction = Vector3(0, -1, 0)
spread = 15.0
initial_velocity_min = 2.0
initial_velocity_max = 3.0
gravity = Vector3(0, -0.5, 0)
scale_min = 0.1
scale_max = 0.3
color = Color(0.229069, 0.508497, 0.766997, 1)
turbulence_enabled = true
turbulence_noise_strength = 0.2
turbulence_noise_scale = 2.0
collision_mode = 1
collision_friction = 0.0
collision_bounce = 0.0

[sub_resource type="SphereMesh" id="SphereMesh_kkyn6"]
material = ExtResource("4_g7o3v")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dkb4p"]
emission_enabled = true
emission = Color(0.821789, 0.821789, 0.821789, 1)
emission_energy_multiplier = 4.02

[sub_resource type="CylinderMesh" id="CylinderMesh_w3dbl"]
material = SubResource("StandardMaterial3D_dkb4p")
top_radius = 0.0
bottom_radius = 0.2
height = 0.5

[node name="Player" type="RigidBody3D" groups=["player"]]
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
contact_monitor = true
max_contacts_reported = 10
linear_damp = 1.0
angular_damp = 3.0
script = ExtResource("1_scd23")
critical_tipping_angle = 53.156

[node name="Movement" type="Node3D" parent="."]
script = ExtResource("2_m6058")

[node name="Fuel" type="Node3D" parent="."]
script = ExtResource("4_qtt7p")

[node name="Stability" type="Node3D" parent="."]
script = ExtResource("6_jxs5u")

[node name="Landing" type="Node3D" parent="."]
script = ExtResource("7_p66tl")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.776183, 0)
shape = SubResource("CylinderShape3D_sg736")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.360569, 0)
shape = SubResource("CylinderShape3D_bc2uk")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.805031, 0)
shape = SubResource("SphereShape3D_i81y8")

[node name="BodyMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2, 0)
visible = false
mesh = SubResource("CylinderMesh_60h71")

[node name="BoosterMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.349935, -0.748604, 0)
visible = false
mesh = SubResource("CylinderMesh_yb2x7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="BoosterMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.62, 0)
mesh = SubResource("CylinderMesh_ak0p8")

[node name="BoosterMesh2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.352285, -0.748604, 0)
visible = false
mesh = SubResource("CylinderMesh_yb2x7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="BoosterMesh2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.62, 0)
mesh = SubResource("CylinderMesh_ak0p8")

[node name="CameraMount" type="Node3D" parent="."]
script = ExtResource("3_lul7u")
smoothing_speed = 5.0

[node name="SpringArm3D" type="SpringArm3D" parent="CameraMount"]

[node name="Camera3D" type="Camera3D" parent="CameraMount/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 0.996195, 0.0871557, 0, -0.0871557, 0.996195, 0, 7.53, 12.73)

[node name="Effects" type="Node3D" parent="."]
script = ExtResource("11_smcew")

[node name="ExplosionBubbles" type="GPUParticles3D" parent="Effects"]
emitting = false
amount = 100
lifetime = 5.0
one_shot = true
explosiveness = 1.0
process_material = ExtResource("10_xw84m")
draw_pass_1 = SubResource("SphereMesh_ng0vx")

[node name="SuccessBubbles" type="GPUParticles3D" parent="Effects" groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.276196, 0)
emitting = false
amount = 33
lifetime = 2.0
one_shot = true
explosiveness = 0.85
randomness = 0.59
trail_lifetime = 2.33
process_material = ExtResource("12_msahl")
draw_pass_1 = SubResource("SphereMesh_ifw7w")

[node name="BubblesAudio" type="AudioStreamPlayer3D" parent="Effects"]
stream = ExtResource("2_05a8e")

[node name="SuccessAudio" type="AudioStreamPlayer3D" parent="Effects"]
stream = ExtResource("4_vxola")

[node name="ExplosionAudio" type="AudioStreamPlayer3D" parent="Effects"]
stream = ExtResource("2_mso6s")
volume_db = 5.162

[node name="BoosterBubblesLeft" type="GPUParticles3D" parent="Effects"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.356287, -1.38724, 0)
emitting = false
process_material = SubResource("ParticleProcessMaterial_is62b")
draw_pass_1 = SubResource("SphereMesh_kkyn6")

[node name="BoosterBubblesCenter" type="GPUParticles3D" parent="Effects"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.08897, 0)
emitting = false
process_material = SubResource("ParticleProcessMaterial_is62b")
draw_pass_1 = SubResource("SphereMesh_kkyn6")

[node name="BoosterBubblesRight" type="GPUParticles3D" parent="Effects"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.39967, -1.3866, 0)
emitting = false
process_material = SubResource("ParticleProcessMaterial_is62b")
draw_pass_1 = SubResource("SphereMesh_kkyn6")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.647377, 0)
omni_range = 77.0
omni_shadow_mode = 0

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]

[node name="Rocket Model" parent="." instance=ExtResource("17_3kkwo")]
transform = Transform3D(-0.5, 0, -4.37114e-08, 0, 0.5, 0, 4.37114e-08, 0, -0.5, 0, -1.48031, 0)

[node name="CockpitMesh" type="MeshInstance3D" parent="Rocket Model"]
transform = Transform3D(1, 0, 0, 0, 1.115, 0, 0, 0, 0.604, -1.94486e-09, 4.17213, 0.0222466)
mesh = SubResource("CylinderMesh_w3dbl")
skeleton = NodePath("../..")

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.73207)

[node name="HUD" parent="." instance=ExtResource("8_gq37x")]

[node name="PauseMenuLayer" type="CanvasLayer" parent="."]
process_mode = 3
layer = 10

[node name="PauseMenu" parent="PauseMenuLayer" instance=ExtResource("18_w1p2d")]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="boost_available" from="Movement" to="HUD" method="show_boost_available"]
[connection signal="boost_unavailable" from="Movement" to="HUD" method="hide_boost_available"]
[connection signal="fuel_changed" from="Fuel" to="HUD" method="update_fuel_display"]
